--- a/saves/saved.yaml
+++ b/saves/saved.yaml
@@ -8,73 +8,119 @@
   time_passed: 10m
   tracked_objects: []
   turns: 2
-- encounters: []
+- encounters:
+  - 2 Giant Shrews
+  rolls: []
+  time_passed: 10m
+  tracked_objects: []
+  turns: 2
+- encounters:
+  - 2 Giant Shrews
   rolls: []
   time_passed: 20m
   tracked_objects: []
   turns: 3
-- encounters: []
+- encounters:
+  - 2 Giant Shrews
   rolls: []
   time_passed: 30m
   tracked_objects: []
   turns: 4
-- encounters: []
-  rolls: []
-  time_passed: 40m
-  tracked_objects: []
-  turns: 5
-- encounters: []
+- encounters:
+  - 2 Giant Shrews
   rolls: []
   time_passed: 40m
   tracked_objects: []
   turns: 5
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls: []
   time_passed: 50m
   tracked_objects: []
   turns: 6
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
+  rolls: []
+  time_passed: 50m
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: -1
+  turns: 6
+- encounters:
+  - 2 Giant Shrews
   rolls: []
   time_passed: 1h 0m
-  tracked_objects: []
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 0
   turns: 7
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls: []
   time_passed: 1h 10m
-  tracked_objects: []
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 1
   turns: 8
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls: []
   time_passed: 1h 20m
-  tracked_objects: []
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
   turns: 9
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls: []
-  time_passed: 1h 30m
-  tracked_objects: []
-  turns: 10
+  time_passed: 1h 20m
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
+  turns: 9
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls: []
-  time_passed: 1h 30m
-  tracked_objects: []
-  turns: 10
+  time_passed: 1h 20m
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: -1
+  turns: 9
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls:
-  - 14
-  time_passed: 1h 30m
-  tracked_objects: []
-  turns: 10
+  - 6
+  time_passed: 1h 20m
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
+  turns: 9
 - encounters:
-  - 7 Sprites
+  - 2 Giant Shrews
   rolls:
-  - 14
-  time_passed: 1h 30m
-  tracked_objects: []
-  turns: 10
+  - 6
+  time_passed: 1h 20m
+  tracked_objects:
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
+  turns: 9
