--- a/saves/saved.yaml
+++ b/saves/saved.yaml
@@ -1,126 +1,127 @@
 - encounters: []
   rolls: []
   time_passed: 0m
-  tracked_objects: []
-  turns: 1
-- encounters: []
-  rolls: []
-  time_passed: 10m
-  tracked_objects: []
-  turns: 2
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 10m
-  tracked_objects: []
-  turns: 2
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 20m
-  tracked_objects: []
-  turns: 3
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 30m
-  tracked_objects: []
-  turns: 4
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 40m
-  tracked_objects: []
-  turns: 5
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 50m
-  tracked_objects: []
-  turns: 6
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 50m
   tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: -1
-  turns: 6
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 1h 0m
-  tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: 0
-  turns: 7
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 1h 10m
-  tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: 1
-  turns: 8
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 1h 20m
-  tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: 2
-  turns: 9
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 1h 20m
-  tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: 2
-  turns: 9
-- encounters:
-  - 2 Giant Shrews
-  rolls: []
-  time_passed: 1h 20m
-  tracked_objects:
-  - kind: torch
-    name: null
-    total_turns: 6
-    turns_passed: 2
   - kind: lantern
     name: null
     total_turns: 24
     turns_passed: -1
-  turns: 9
-- encounters:
-  - 2 Giant Shrews
-  rolls:
-  - 6
-  time_passed: 1h 20m
+  turns: 0
+- encounters: []
+  rolls: []
+  time_passed: 0m
   tracked_objects:
-  - kind: torch
+  - kind: lantern
     name: null
-    total_turns: 6
-    turns_passed: 2
-  turns: 9
-- encounters:
-  - 2 Giant Shrews
-  rolls:
-  - 6
-  time_passed: 1h 20m
+    total_turns: 24
+    turns_passed: 0
+  turns: 1
+- encounters: []
+  rolls: []
+  time_passed: 10m
   tracked_objects:
-  - kind: torch
+  - kind: lantern
     name: null
-    total_turns: 6
+    total_turns: 24
+    turns_passed: 1
+  turns: 2
+- encounters: []
+  rolls: []
+  time_passed: 20m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
     turns_passed: 2
-  turns: 9
+  turns: 3
+- encounters: []
+  rolls: []
+  time_passed: 20m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 2
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: -1
+  turns: 3
+- encounters: []
+  rolls: []
+  time_passed: 30m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 3
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 0
+  turns: 4
+- encounters: []
+  rolls: []
+  time_passed: 40m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 4
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 1
+  turns: 5
+- encounters: []
+  rolls: []
+  time_passed: 50m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 5
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 2
+  turns: 6
+- encounters: []
+  rolls: []
+  time_passed: 1h 0m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 6
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 3
+  turns: 7
+- encounters: []
+  rolls: []
+  time_passed: 1h 10m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 7
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 4
+  turns: 8
+- encounters: []
+  rolls: []
+  time_passed: 1h 10m
+  tracked_objects:
+  - kind: lantern
+    name: null
+    total_turns: 24
+    turns_passed: 7
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 4
+  turns: 8
