--- a/saves/borderlands.yml
+++ b/saves/borderlands.yml
@@ -28,3 +28,189 @@
   time_passed: 40m
   tracked_objects: []
   turns: 5
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 40m
+  tracked_objects: []
+  turns: 5
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 40m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: -1
+  turns: 5
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 50m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 0
+  turns: 6
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 0m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 1
+  turns: 7
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 2
+  turns: 8
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 2
+  turns: 8
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 2
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: -1
+  turns: 8
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 20m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 3
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 0
+  turns: 9
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 30m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 4
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 1
+  turns: 10
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 30m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 4
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 1
+  turns: 10
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 40m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 5
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 2
+  turns: 11
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 1h 50m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 6
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 3
+  turns: 12
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 2h 0m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 7
+  - kind: torch
+    name: null
+    total_turns: 6
+    turns_passed: 4
+  turns: 13
+- encounters: []
+  rolls:
+  - 8
+  time_passed: 2h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 8
+  turns: 14
+- encounters:
+  - 2 Troglodytes
+  rolls:
+  - 8
+  time_passed: 2h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 8
+  turns: 14
+- encounters:
+  - 2 Troglodytes
+  rolls:
+  - 8
+  time_passed: 2h 10m
+  tracked_objects:
+  - kind: spell
+    name: sleep
+    total_turns: 10
+    turns_passed: 8
+  turns: 14
